--- a/index.html
+++ b/index.html
@@ -5,9 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
+  <title>Tic-Tac-Toe Game</title>
 </head>
 <body>
+
+  <div class="game-container">
+    <div class="tic-tac-toe">
+      <div class="grid-cell">
+        <span>X</span>
+      </div>
+      <div class="grid-cell">
+        <span>X</span>
+      </div>
+      <div class="grid-cell">
+        <span>O</span>
+      </div>
+      <div class="grid-cell">
+        <span>O</span>
+      </div>
+      <div class="grid-cell">
+        <span>X</span>
+      </div>
+      <div class="grid-cell">
+        <span>X</span>
+      </div>
+      <div class="grid-cell">
+        <span>O</span>
+      </div>
+      <div class="grid-cell">
+        <span>X</span>
+      </div>
+      <div class="grid-cell">
+        <span>O</span>
+      </div>
+    </div>
+  </div>
 
   <script type="text/javascript" src="main.js">
   </script>
