Create a function inside of the gameFlow module to check for a winner

--- a/index.html
+++ b/index.html
@@ -11,33 +11,15 @@
 
   <div class="game-container">
     <div class="tic-tac-toe">
-      <div class="grid-cell" data-box="0">
-
-      </div>
-      <div class="grid-cell" data-box="1">
-
-      </div>
-      <div class="grid-cell" data-box="2">
-
-      </div>
-      <div class="grid-cell" data-box="3">
-
-      </div>
-      <div class="grid-cell" data-box="4">
-
-      </div>
-      <div class="grid-cell" data-box="5">
-
-      </div>
-      <div class="grid-cell" data-box="6">
-
-      </div>
-      <div class="grid-cell" data-box="7">
-
-      </div>
-      <div class="grid-cell" data-box="8">
-
-      </div>
+      <div class="grid-cell" data-box="0"></div>
+      <div class="grid-cell" data-box="1"></div>
+      <div class="grid-cell" data-box="2"></div>
+      <div class="grid-cell" data-box="3"></div>
+      <div class="grid-cell" data-box="4"></div>
+      <div class="grid-cell" data-box="5"></div>
+      <div class="grid-cell" data-box="6"></div>
+      <div class="grid-cell" data-box="7"></div>
+      <div class="grid-cell" data-box="8"></div>
     </div>
   </div>
 
