--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
 
+  <div class="overlay-text ">
+    WINNER:
+    <button class="restart-button">Restart</button>
+  </div>
+
+  <div id="draw" class="overlay-text ">
+    IT'S A DRAW!
+    <button class="restart-button">Restart</button>
+  </div>
+
   <div class="game-container">
     <div class="tic-tac-toe">
       <div class="grid-cell" data-box="0"></div>
