Create a function to display the winner screen.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="overlay-text ">
+  <div id="win" class="overlay-text ">
     WINNER:
     <button class="restart-button">Restart</button>
   </div>
