Write the initial logic for the restart game and successfully manage the clearing of the board.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
   <div id="win" class="overlay-text ">
-    WINNER:
-    <button class="restart-button">Restart</button>
+    <p id="winner-text"></p>
+    <button type="button" class="restart-button">Restart</button>
   </div>
 
   <div id="draw" class="overlay-text ">
     IT'S A DRAW!
-    <button class="restart-button">Restart</button>
+    <!-- <button class="restart-button">Restart</button> -->
   </div>
 
   <div class="game-container">
