Update overlay end screen id name and p element id name in html file and javascript file.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-  <div id="win" class="overlay-text ">
-    <p id="winner-text"></p>
+  <div id="end-screen" class="overlay ">
+    <p id="end-text"></p>
     <button type="button" class="restart-button">Restart</button>
   </div>
 
